# FileIO

./: CMakeLists.txt  CPackLists.txt  FileIO.cpp  FileIO.h  FileSystemWalker.cpp  FileSystemWalker.h  ForkerPipe.cpp  ForkerPipe.h  README.md  Result.h  ValidateChecks.cpp  ValidateChecks.h  concurrent.hpp
cmake/: FileIOConfig.cmake
packaging/: FileIO.spec
scripts/: buildRpm.sh  codeCoverage.sh  unitTestRunner.sh
src/: DirectoryReader.cpp  DirectoryReader.h  FileIO.cpp  FileIO.h  FileSystemWalker.cpp  FileSystemWalker.h  Result.h
test/: ToolsTestFileIO.cpp  ToolsTestFileIO.h  ToolsTestFileSystemWalker.cpp
